<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/linearLayoutSearchItemList"
            android:name="step.learning.web_store.SearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewItemList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearchItemList">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/largeItemImgV"
                    android:layout_width="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_height="350dp"
                    android:contentDescription="@string/item_img_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/largeItemImgV">

                    <LinearLayout
                        android:id="@+id/small_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>


                    <!--                    <com.google.android.flexbox.FlexboxLayout-->
                    <!--                        android:id="@+id/itemListContainer"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:clipChildren="false"-->
                    <!--                        app:alignContent="stretch"-->
                    <!--                        app:alignItems="stretch"-->
                    <!--                        app:flexWrap="wrap"-->
                    <!--                        app:justifyContent="space_around">-->

                    <!--                    </com.google.android.flexbox.FlexboxLayout>-->

                </ScrollView>

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/teal"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:progressTint="@color/yellow"
                    android:rating="3.4"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleView" />

                <TextView
                    android:id="@+id/quantityReviewTV"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ratingBar"
                    app:layout_constraintTop_toBottomOf="@+id/titleView" />

                <TextView
                    android:id="@+id/inStockTV"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/textV_price"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="30dp"
                    android:textSize="20sp"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    android:text="@string/addtoBasket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textV_price" />

                <TextView
                    android:id="@+id/textV_description_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/description"
                    app:layout_constraintTop_toBottomOf="@+id/buyButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/textV_description_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAlignment="inherit"
                    app:layout_constraintTop_toBottomOf="@+id/textV_description_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"/>
                <TextView
                    android:id="@+id/textV_feature_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/features"
                    app:layout_constraintTop_toBottomOf="@+id/textV_description_body"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"/>

                    <LinearLayout
                        android:id="@+id/featuresTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:orientation="vertical"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/textV_feature_name"
                        >

<!--                        <LinearLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:orientation="horizontal">-->
<!--                            <TextView-->
<!--                                android:layout_weight="0.5"-->
<!--                                android:background="@drawable/feature_gray"-->
<!--                                android:text="Логин:"-->
<!--                                android:paddingHorizontal="10dp"-->
<!--                                android:textSize="17sp"-->
<!--                                android:paddingVertical="5dp"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content" />-->

<!--                            <TextView-->
<!--                                android:layout_weight="1"-->
<!--                                android:text="Логин"-->
<!--                                android:paddingHorizontal="10dp"-->
<!--                                android:paddingVertical="5dp"-->
<!--                                android:background="@color/light_grey"-->
<!--                                android:textSize="17sp"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content" />-->
<!--                        </LinearLayout>-->


                    </LinearLayout>

                <TextView
                    android:id="@+id/textV_review_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/review"
                    app:layout_constraintTop_toBottomOf="@+id/featuresTable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    />

                <LinearLayout
                    android:id="@+id/container_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/textV_review_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    >
<!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginVertical="20dp"-->
<!--                        android:layout_marginHorizontal="20dp"-->
<!--                        android:background="@drawable/review_background"-->
<!--                        android:padding="10dp">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="2024-04-01 18:02:04"-->
<!--                            app:layout_constraintStart_toStartOf="parent"-->
<!--                            app:layout_constraintTop_toTopOf="parent"-->
<!--                            android:layout_marginEnd="15dp"-->
<!--                            android:layout_marginTop="10dp"-->
<!--                            android:layout_marginStart="10dp"/>-->

<!--                        <RatingBar-->
<!--                            android:id="@+id/rating_review_bar"-->
<!--                            style="?android:attr/ratingBarStyleIndicator"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="40dp"-->
<!--                            android:layout_marginStart="4dp"-->
<!--                            android:progressTint="@color/yellow"-->
<!--                            android:rating="3.4"-->
<!--                            android:scaleX="0.5"-->
<!--                            android:scaleY="0.5"-->
<!--                            app:layout_constraintEnd_toEndOf="parent"-->

<!--                            app:layout_constraintTop_toTopOf="parent" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/textV_review_text"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="15sp"-->
<!--                            android:textAlignment="inherit"-->
<!--                            android:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA AAAA++++++++++++++++++++++++++++++"-->
<!--                            app:layout_constraintTop_toBottomOf="@+id/rating_review_bar"-->
<!--                            app:layout_constraintEnd_toEndOf="parent"-->
<!--                            app:layout_constraintStart_toStartOf="parent"-->
<!--                            android:layout_marginHorizontal="10dp"-->
<!--                            android:layout_marginBottom="15dp"/>-->

<!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>



<!--            <com.google.android.flexbox.FlexboxLayout-->
<!--                android:id="@+id/itemListContainer"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:clipChildren="false"-->
<!--                app:alignContent="stretch"-->
<!--                app:alignItems="stretch"-->
<!--                app:flexWrap="wrap"-->
<!--                app:justifyContent="space_around">-->
<!--                -->
<!--            </com.google.android.flexbox.FlexboxLayout>-->
        </ScrollView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationViewItemList"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bottom_background"
            android:elevation="2dp"
            app:itemIconSize="30dp"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>